# python-learnings

./: README.md  pyproject.toml
practical-linear-algebra/: README.md  ch10_exercises.ipynb  ch11_exercises.ipynb  ch12_exercises.ipynb  ch6_exercises.ipynb  ch7_exercises.ipynb  ch8_exercises.ipynb  ch9_exercises.ipynb
practical-linear-algebra/ch2/: exercise_2_1.ipynb  exercise_2_2.ipynb  exercise_2_3.ipynb  exercise_2_4.ipynb  exercise_2_6.ipynb  exercise_2_7.ipynb  exercise_2_8.ipynb
practical-linear-algebra/ch3/: exercise_3_1.ipynb  exercise_3_3.ipynb
practical-linear-algebra/ch4/: exercise_4_1.ipynb  exercise_4_2.ipynb  exercise_4_5.ipynb  exercise_4_6.ipynb  exercise_4_8.ipynb
practical-linear-algebra/ch5/: exercises.ipynb
