[project]
name = "python-learnings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas-stubs>=3.0.3.260530",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "scipy-stubs>=1.17.1.5",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
]
